# modutil

./: .travis.yml  README.md  modutil.py  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
tests/: test_calc___all__.py  test_chained___getattr__.py  test_filtered_attrs.py  test_filtered_dir.py  test_lazy___all__.py  test_lazy_imports.py
tests/test_data/: all_.py  lazy_mod.py
tests/test_data/lazy_pkg/: __init__.py
